--- a/MU/BoardModule/Resources/config/helpers.yml
+++ b/MU/BoardModule/Resources/config/helpers.yml
@@ -4,6 +4,7 @@ services:
         class: MU\BoardModule\Helper\CollectionFilterHelper
         arguments:
             - "@request_stack"
+            - "@mu_board_module.permission_helper"
             - "@zikula_users_module.current_user"
             - "@=service('zikula_extensions_module.api.variable').get('MUBoardModule', 'showOnlyOwnEntries', false)"
     
@@ -63,16 +64,25 @@ services:
             - "@mu_board_module.entity_display_helper"
             - "@mu_board_module.workflow_helper"
     
+    mu_board_module.permission_helper:
+        class: MU\BoardModule\Helper\PermissionHelper
+        arguments:
+            - "@service_container"
+            - "@request_stack"
+            - "@zikula_permissions_module.api.permission"
+            - "@zikula_users_module.current_user"
+            - "@zikula_users_module.user_repository"
+    
     mu_board_module.search_helper:
         class: MU\BoardModule\Helper\SearchHelper
         arguments:
             - "@translator.default"
-            - "@zikula_permissions_module.api.permission"
             - "@session"
             - "@request_stack"
             - "@mu_board_module.entity_factory"
             - "@mu_board_module.controller_helper"
             - "@mu_board_module.entity_display_helper"
+            - "@mu_board_module.permission_helper"
         tags:
             - { name: zikula.searchable_module, bundleName: MUBoardModule }
     
@@ -93,10 +103,10 @@ services:
             - "@twig"
             - "@twig.loader"
             - "@request_stack"
-            - "@zikula_permissions_module.api.permission"
             - "@zikula_extensions_module.api.variable"
             - "@zikula_core.common.theme.pagevars"
             - "@mu_board_module.controller_helper"
+            - "@mu_board_module.permission_helper"
     
     mu_board_module.workflow_helper:
         class: MU\BoardModule\Helper\WorkflowHelper
@@ -104,7 +114,7 @@ services:
             - "@translator.default"
             - "@workflow.registry"
             - "@logger"
-            - "@zikula_permissions_module.api.permission"
             - "@zikula_users_module.current_user"
             - "@mu_board_module.entity_factory"
             - "@mu_board_module.listentries_helper"
+            - "@mu_board_module.permission_helper"
