--- a/MU/BoardModule/Resources/config/linkContainer.yml
+++ b/MU/BoardModule/Resources/config/linkContainer.yml
@@ -4,7 +4,7 @@ services:
         arguments:
             - "@translator.default"
             - "@router"
-            - "@zikula_permissions_module.api.permission"
             - "@zikula_extensions_module.api.variable"
             - "@mu_board_module.controller_helper"
+            - "@mu_board_module.permission_helper"
         tags: ['zikula.link_container']
